--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,35 @@
  *= require_tree .
  *= require_self
  */
+
+
+ body {
+   color: #565a5c;
+   background-color: #F8F8F8;
+ }
+
+ li {
+   list-style-type: none;
+ }
+
+ .container {
+   width: 80%;
+ }
+
+ .navbar-default {
+   background-color: #FFFFFF;
+ }
+
+ .navbar-default .navbar-brand {
+   color: #FF5A5F;
+   font-size: 2em;
+   font-weight: 400;
+ }
+
+.navbar {
+  margin-bottom: 50px;
+}
+
+#navbar-btn {
+  margin: 14px;
+}
