--- a/app/views/resources/_form.html.erb
+++ b/app/views/resources/_form.html.erb
@@ -22,6 +22,7 @@
         </div>
       </div>
 
+       <!-- TODO: finish FORM! -->
       <!-- Resource category -->
       <div class="row">
         <div class="input-field col s12 m6">
