--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
  */
 
 
+
+
  body {
    color: #565a5c;
    background-color: #F8F8F8;
@@ -22,6 +24,10 @@
 
  li {
    list-style-type: none;
+ }
+
+ select {
+   display: block;
  }
 
  .container {
