--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-static-top">
  <div class="container">
    <div class="navbar-header">
-     <%= link_to "BotsBotsBots", resources_path, class: "navbar-brand"%>
+     <%= link_to "Bots Resources", resources_path, class: "navbar-brand"%>
      <!-- <%= link_to "Post a new Resource", new_resource_path, class: "pull-right btn btn-primary soon disabled", id: "navbar-btn" %> -->
      <!-- <a href="#" class="pull-right btn btn-primary disabled" id="navbar-btn" style="cursor: not-allowed">Post A New Resource</a> -->
    </div>
