--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,6 +2,9 @@
  <div class="container">
    <div class="navbar-header">
      <%= link_to "Bots Resources", resources_path, class: "navbar-brand"%>
+     <div id="navbar-btn" class="btn btn-primary pull-right" style="float: right;">
+       <a class="mailto" href="mailto:parisbotmeetup@gmail.com?subject=Submit a resource&body=Name:%0D%0ALink:%0D%0ACategory:%0D%0AAny suggestion:">Submit</a>
+     </div>
      <!-- <%= link_to "Post a new Resource", new_resource_path, class: "pull-right btn btn-primary soon disabled", id: "navbar-btn" %> -->
      <!-- <a href="#" class="pull-right btn btn-primary disabled" id="navbar-btn" style="cursor: not-allowed">Post A New Resource</a> -->
    </div>
