add simple footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,7 @@
 
 <%= yield %>
 
+<footer class="center"> Contribute on the <a href="https://github.com/stanams/botbotbot">github repo</a>, by <a href="https://github.com/stanams/">@Stanams</a></footer>
+
 </body>
 </html>
