add meta tags and update resources

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,20 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <!-- Google tags -->
+  <meta name="description" content="A curated list of resources to make bots.">
+
+  <!-- Facebook tags -->
+  <meta property="og:title" content="Bots Resources">
+  <meta property="og:image" content="http://res.cloudinary.com/codehunt/image/upload/v1466007026/Bots_resources_deja4b.png">
+  <meta property="og:description" content="A curated list of resources to help you make or understand chatbots, organized by categories such as NLP Engines, Tools, Tutorials...">
+
+  <!-- Twitter tags -->
+  <meta property="twitter:title" content="Bots Resources">
+  <meta property="twitter:image" content="http://res.cloudinary.com/codehunt/image/upload/v1466007026/Bots_resources_deja4b.png">
+  <meta property="twitter:description" content="A curated list of resources to help you make or understand chatbots, organized by categories such as NLP Engines, Tools, Tutorials...">
+
 </head>
 <body>
 
